----------
v3.2.0-git
----------

[mms] Add ability to filter rules by mailbox.
[mms] Add 'max_forward' permission (Request #10332).
[mms] Permissions can now be applied per backend, rather than globally.
[mms] Replace max blacklist/whitelist configuration parameters with equivalent
      permissions options.
[mms] Sorting of rules now done via drag/drop javascript (Request #1993).
[jan] Make shares table compatible with Oracle.
[mms] Validate e-mail addresses on the forward and vacation pages (Request
      #7249).
[mms] Add 'newEmailFilter' API link.


------
v3.1.5
------

[mms] Fix blacklist/whitelist matching with IMAP backend (Bug #13031).
[mms] Fix procmail reject recipe (Bug #13060; admin@dei.unipd.it).


------
v3.1.4
------

[jan] Update Danish translation (Erling Preben Hansen <erling@eph.dk>).
[jan] Make spam level a required form field (Bug #12964).
[jan] Fix behavior of 'utf' parameter (Bug #12937).
[mms] Fix sieve driver correctly identifying mailing lists when determining
      whether to send vacation messages
      (skhorde@smail.inf.fg-bonn-rhein-sieg.de, Bug #12938).


------
v3.1.3
------

[mms] SECURITY: Protect against CSRF attacks by using tokens on destructive
      actions (Bug #12796; CVE-2013-6275; found by Marcela Benetrix
      <m.benetrix@e-secure.com.au>).


------
v3.1.2
------

[mms] Disable links if the underlying preferences are locked.
[jan] Fix setting excluded addresses and mailing list flag in Sieve vacation
      rule.


------
v3.1.1
------

[jan] Fix option to filter by user-defined headers (Bug #12345).
[jan] Fix highlighting of menu entries.
[jan] Restore compatibility with PHP 5.3 (Bug #12306).


------
v3.1.0
------

[mjr] Fix fatal error when updating filters.


---------
v3.1.0RC1
---------

[mms] Fix regression in accessing Ingo links from the external API (Bug
      #12249).


-----------
v3.1.0beta1
-----------

[jan] Add composite script backends.
[jan] Add vacation driver for ISPConfig (Michael Bunk