@@ -2,6 +2,8 @@
 v3.2.0-git
 ----------
 
+[mms] Use standardized 'imap4flags' sieve extension (RFC 5232) by default
+      instead of deprecated 'imapflags' extension (Request #8784).
 [mms] Add ability to filter rules by mailbox.
 [mms] Add 'max_forward' permission (Request #10332).
 [mms] Permissions can now be applied per backend, rather than globally.
